2007-07-13:
	* src/auth.c: check for NULL or empty passwords.

2007-07-12:
	* src/stash.c: switch from saving a path and removing the file to a
	push/pop interface, allowing multiple ccaches and ticket files to
	exist at the same time
	* src/v4.c,src/v5.c: use push/pop to create/remove files
	* src/tokens.c: use the topmost ccache name
	* src/session.c: don't skip creating ccache/ticket files when we've
	already done so

2007-07-10:
	* src/options.c: be more careful about freeing a couple of list
	parameters.

2007-07-10:
	* src/harness.c: add a --run option, so that I can run a command
	when the session's set up and the credentials are initialized.

2007-06-24:
	* src/password.c: display the right string.
	* tests/run-tests: start to adjust for getting-prompts-changes-passwords
	behavior.
	* tests/config/kdc.conf.in: place the location of files in the right
	part of the file

2007-06-24:
	* src/password.c(pam_sm_chauthtok): always display result_text for
	the user's sake.  Actually check that we opened the pwhelp file,
	like Luke's original patch did.

2007-06-24:
	* tests/pwhelp.txt,tests/run-tests: add a test for the pwhelp option.

2007-06-24:
	* Makefile.am: don't use the gmake $(shell) option; use backticks.

2007-06-24:
	* src/options.c: add a "pwhelp" option.
	* src/password.c(pam_sm_chauthtok): display the contents of the
	pwhelp file before doing anything else when in the preliminary check
	phase (#230465, Luke Howard).

2007-06-24:
	* src/prompter.c(_pam_krb5_always_fail_prompter,
	_pam_krb5_previous_prompter): output the banner and name information
	if it was given (#230450).

2007-06-24:
	* src/password.c(pam_sm_chauthtok): when returning, note whether
	we are here for the preliminary check or the actual update in the
	debug message (#230444, Luke Howard).

2007-06-24:
	* src/password.c(pam_sm_chauthtok): set v5_attempted to 1 for
	correctness (#230446, Luke Howard, Pieter Krul).

2007-06-24: